<resources>
    <string name="app_name">MPAndroid</string>
    <string name="action_settings">action_settings</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_FirstView">介紹</string>
    <string name="nav_ChartTitle">圖表範例</string>
    <string name="nav_OtfeTitle">實時數據範例</string>

    <string name="nav_BarChart">BarChart 長條圖</string>
    <string name="nav_CandleStickChart">CandleStickChart 蠟燭圖</string>
    <string name="nav_LineChart">LineChart 折線圖</string>
    <string name="nav_PieChart">PieChart 圓餅圖</string>
    <string name="nav_RadarChart">RadarChart 雷達圖</string>
    <string name="nav_OtfeCandleStickChart">OtfeCandleStickChart 實時蠟燭圖</string>
    <string name="nav_OtfeLineChart">OtfeLineChart 實時折線圖</string>

    <string name="Bar1">Bar1</string>
    <string name="Bar2">Bar2</string>
    <string name="Bar3">Bar3</string>

    <string name="Pei1">Pei1</string>
    <string name="Pei2">Pei2</string>

    <string name="Line1">Line1</string>
    <string name="Line2">Line2</string>

    <string name="Radar1">Radar1</string>
    <string name="Radar2">Radar2</string>

    <string name="Candle1">Candle1</string>
    <string name="Candle2">Candle2</string>

    <string name="OtfeLineChart_btn_addEntry">AddEntry</string>
    <string name="OtfeLineChart_btn_removeLastEntry">RemoveLastEntry</string>
    <string name="OtfeLineChart_btn_addDataSet">AddDataSet</string>
    <string name="OtfeLineChart_btn_removeLastDataSet">RemoveLastDataSet</string>
    <string name="OtfeLineChart_btn_clearChart">ClearChart</string>
    <string name="OtfeLineChart_btn_setEmptyLineData">SetEmptyLineData</string>
</resources>
